<resources>
    <string name="app_name">reply</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="praise">点赞</string>
    <string name="collection">收藏</string>
    <string name="reply">回复</string>
    <string name="leaveMessage">留言</string>
</resources>
