<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="10dp">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
				<!-- 发送者图像 -->
			    <ImageView 
			        android:id="@+id/senderImg"
			        android:layout_width="60dp"
			        android:layout_height="60dp"
			        android:scaleType="fitXY"
			        android:layout_marginRight="10dp"
			        android:contentDescription="@string/app_name"/>
			    <!-- 发送者昵称、发送时间、发送内容 -->
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical">
			        <RelativeLayout 
			            android:layout_width="wrap_content"
			            android:layout_height="30dp">
			            <!-- 发送者昵称 -->
			            <TextView 
			                android:textSize="12sp"
			                android:textColor="#23238E"
			                android:id="@+id/senderNickname"
			                android:layout_width="wrap_content"
			                android:layout_height="match_parent"
			                android:gravity="center_vertical"
			                android:layout_alignParentLeft="true"/>
			            <!-- 发送时间 -->
			            <TextView 
			                android:id="@+id/sendTime"
			                android:textSize="8sp"
			                android:layout_width="wrap_content"
			                android:layout_height="match_parent"
			                android:gravity="center_vertical"
			                android:layout_alignParentRight="true"/>
			        </RelativeLayout>
			        <!-- 发送内容 -->
			        <TextView 
			            android:id="@+id/sendContent"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:maxLines="4"
			            android:textSize="12sp"
			            android:layout_marginTop="5dp"/>
			        <!-- 评论、转载、点赞 -->
				    <RelativeLayout 
				        android:layout_width="match_parent"
				        android:layout_height="40dp"
				        android:layout_marginTop="20dp">
			            <!-- 转载 -->
				        <ImageView 
				            android:id="@+id/shareImg"
				            android:layout_width="80dp"
				            android:layout_height="match_parent"
				            android:scaleType="fitXY"
				            android:src="@drawable/share"
				            android:layout_alignParentLeft="true"
				            android:contentDescription="@string/app_name"/>
				        <!-- 评论 -->
				        <ImageView 
				            android:id="@+id/commentImg"
				            android:layout_width="80dp"
				            android:layout_height="match_parent"
				            android:scaleType="fitXY"
				            android:src="@drawable/comment"
				            android:layout_centerHorizontal="true"
				            android:contentDescription="@string/app_name"/>
				        <!-- 点赞 -->
				        <ImageView 
				            android:id="@+id/praiseImg"
				            android:layout_width="80dp"
				            android:layout_height="match_parent"
				            android:scaleType="fitXY"
				            android:src="@drawable/praise"
				            android:layout_alignParentRight="true"
				            android:contentDescription="@string/app_name"/>
				    </RelativeLayout>
			    </LinearLayout>
		    </LinearLayout>
		    <!-- 评论列表 -->
		    <pub.ven.reply.NoScrollListView
		        android:id="@+id/commentList"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:divider="#00000000"/>
     	</LinearLayout>
   </ScrollView>
   <!-- 下面的分享、评论、转载、收藏 -->
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:id="@+id/bottomLinear"
       android:orientation="horizontal"
       android:background="#CCCCCC">
       <!-- 分享 -->
       <TextView 
           android:id="@+id/shareText"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/share"
           android:textColor="#000000"/>
       <!-- 评论 -->
       <TextView 
           android:id="@+id/commentText"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/comment"
           android:textColor="#000000"/>
       <!-- 点赞 -->
       <TextView 
           android:id="@+id/praiseText"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/praise"
           android:textColor="#000000"/>
       <!-- 收藏 -->
       <TextView 
           android:id="@+id/collectionText"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:gravity="center"
           android:text="@string/collection"
           android:textColor="#000000"/>
   </LinearLayout>
   <!-- 输入框、留言按钮 -->
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#CCCCCC"
       android:id="@+id/commentLinear"
       android:visibility="gone"
       android:orientation="horizontal">
       <!-- 输入框 -->
       <EditText 
           android:id="@+id/commentEdit"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:background="#FFFFFF"
           android:maxLength="100"
           android:minHeight="40dp"
           android:layout_marginTop="5dp"
           android:layout_marginBottom="5dp"
           android:inputType="textMultiLine"
           android:gravity="left"
           android:maxLines="6"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_gravity="center_vertical"/>
       <!-- 留言按钮 -->
       <Button 
           android:id="@+id/commentButton"
           android:layout_width="50dp"
           android:layout_height="40dp"
           android:textColor="#000000"
           android:text="@string/leaveMessage"
           android:layout_marginRight="10dp"
           android:background="#FFFFFF"
           android:layout_gravity="center_vertical"/>
   </LinearLayout>

</LinearLayout>
